# gonhanh.org

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Makefile  README.md  SECURITY.md  cspell.json  deny.toml
.cspell/: acronyms+names.wordlist.txt  jargon.wordlist.txt  shell.wordlist.txt  workspace.wordlist.txt
.github/: fluent_linter_config.yml
.github/workflows/: CICD.yml  notarize-complete.yml  pre-release.yml  release.yml  reopen-issue-on-comment.yml
core/src/: lib.rs  utils.rs
core/src/data/: chars.rs  constants.rs  vowel.rs
core/src/engine/: mod.rs  shortcut.rs  validation.rs
core/src/updater/: mod.rs
core/tests/: auto_capitalize_test.rs  auto_restore_dynamic_test.rs  bug_reports_test.rs  char_test.rs  consumed_flag_test.rs  dynamic_test.rs  engine_test.rs  english_100k_test.rs  english_auto_restore_test.rs  english_auto_restore_toggle_test.rs  english_words_test.rs  foreign_consonants_test.rs  integration_test.rs  keyboard_layout_test.rs  permutation_test.rs  revert_auto_restore_test.rs  typing_order_consistency_test.rs  typing_test.rs  vietnamese_dict_test.rs
core/tests/common/: mod.rs
crates/data/: Cargo.toml
crates/data/src/: chars.rs  constants.rs  lib.rs  vowel.rs
crates/engine/: Cargo.toml
crates/engine/src/: buffer.rs  engine.rs  lib.rs  syllable.rs  transform.rs  utils.rs  validation.rs
crates/engine/src/input/: mod.rs
crates/engine/tests/: auto_capitalize_test.rs  auto_restore_dynamic_test.rs  bug_reports_test.rs  consumed_flag_test.rs  disabled_shortcut_test.rs  dynamic_test.rs  engine_test.rs  english_100k_test.rs  english_auto_restore_test.rs  english_auto_restore_toggle_test.rs  english_telex_patterns_test.rs  english_words_test.rs  foreign_consonants_test.rs  integration_test.rs  keyboard_layout_test.rs  paragraph_test.rs  revert_auto_restore_test.rs  test_lissa_larra.rs  typing_order_consistency_test.rs  typing_order_permutation_test.rs  unit_test.rs  vietnamese_22k_test.rs  vietnamese_dict_test.rs
crates/engine/tests/common/: mod.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs  telex.rs  vni.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
docs/: apple-developer-setup.md  codebase-summary.md  common-issues.md  core-engine-algorithm.md  development.md  install-linux.md  project-overview-pdr.md  vietnamese-language-system.md
scripts/: generate-release-notes.sh  install-linux.sh  test-typing-marks-at-end.swift  test-typing.swift
util/: build-core.sh  build-macos.sh  build-run-test-coverage-linux.sh  build-windows.sh  release-notes.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1  test-benchmark.sh  test-dict.sh
