[package]
name = "input"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Gõ Nhanh - Input method adapters (Telex, VNI, etc.)"

[dependencies]
data = { path = "../data" }

[dev-dependencies]
rstest.workspace = true
serial_test.workspace = true

[lib]
crate-type = ["rlib"]
